    (Sean Busbey via wang)

    HADOOP-12056. Use DirectoryStream in DiskChecker#checkDirs to detect
    errors when listing a directory. (Zhihai Xu via wang)

    HADOOP-12055. Deprecate usage of NativeIO#link. (Andrew Wang via cnauroth)

    HADOOP-11971. Move test utilities for tracing from hadoop-hdfs to
    hadoop-common. (Masatake Iwasaki via aajisaka)

  OPTIMIZATIONS

    HADOOP-11785. Reduce the number of listStatus operation in distcp
    buildListing (Zoran Dimitrijevic via Colin P. McCabe)

    HADOOP-11812. Implement listLocatedStatus for ViewFileSystem to speed up
    split calculation (gera)

    HADOOP-11970. Replace uses of ThreadLocal<Random> with JDK7
    ThreadLocalRandom.  (Sean Busbey via Colin P. McCabe)

    HADOOP-11772. RPC Invoker relies on static ClientCache which has
    synchronized(this) blocks. (wheat9)

    HADOOP-11242. Record the time of calling in tracing span of
    IPC server. (Masatake Iwasaki via aajisaka)

    HADOOP-11885. hadoop-dist dist-layout-stitching.sh does not work with dash.
    (wang)

  BUG FIXES

    HADOOP-11802: DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-10027. *Compressor_deflateBytesDirect passes instance instead of
    jclass to GetStaticObjectField. (Hui Zheng via cnauroth)

    HADOOP-11724. DistCp throws NPE when the target directory is root.
    (Lei Eddy Xu via Yongjun Zhang) 

    HADOOP-11760. Fix typo of javadoc in DistCp. (Brahma Reddy Battula via
    ozawa).

    HADOOP-11800. Clean up some test methods in TestCodec.java.
    (Brahma Reddy Battula via aajisaka)

    HADOOP-11811. Fix typos in hadoop-project/pom.xml and TestAccessControlList.
    (Brahma Reddy Battula via ozawa)

    HADOOP-11704. DelegationTokenAuthenticationFilter must pass ipaddress
    instead of hostname to ProxyUsers#authorize (Anubhav Dhoot via asuresh)

    HADOOP-11846 TestCertificateUtil.testCorruptPEM failing on Jenkins JDK8.